# MarketAI

./: .coverage_report.json  .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  0.20  CHANGELOG.md  CHANGELOG_entry.md  CLAUDE.md  CTempcoverage_out.txt  Dockerfile  INSTALL.md  ISTRUZIONI_MANUALI_SETT3.md  Makefile  MarketAI.spec  alembic.ini  app_unified.py  build.bat  check_cov.py  coverage.json  diagnose_and_fix.py  docker-compose.yml  etoro_raw_payload.json  launcher.py  make_icon.py  mkdocs.yml  pyproject.toml  repair_sett2_sett3.py  show_missing.py
.claude/: settings.local.json
bridge/: __init__.py  api_contracts.py  engine_client.py  market_context_builder.py  personal_client.py
config/: alert_rules.yaml  alpha_decay.yaml  cache_ttl.yaml  correlation_v2.yaml  cross_source_config.yaml  custom_indicators.yaml  data_fallback_chains.yaml  data_quality.yaml  data_retention.yaml  default.yaml  feature_flags.yaml  labour_market.yaml  macro_extended.yaml  modules_registry.yaml  news_sources.yaml  operational_defaults.yaml  pattern_config.yaml  rate_limits.yaml  rate_limits.yaml.update  regime_weights.yaml  sanity_rules.yaml  sentiment_sources.yaml  sentiment_v2.yaml  surprise_engine.yaml  surprise_engine_consensus.yaml  ui_theme.yaml  valuation.yaml  watched_tickers.yaml
custom_indicators/: __init__.py  auto_calibrator.py  backtester.py  ic_tracker.py  publisher.py  registry.py
custom_indicators/dsl/: __init__.py  evaluator.py  namespace.py  parser.py  validator.py
data/: marketai_personal.db
docs/: COMPONENTS.md  changelog.md  index.md
docs/architecture/: bridge.md  data-layer.md  engine.md  observability.md  overview.md  personal.md
docs/getting-started/: configuration.md  quickstart.md  setup.md
docs/guides/: backtesting.md  deployment.md  stress-testing.md
docs/reference/: conventions.md  data-sources.md  feature-flags.md  rate-limits.md
engine/alerts/: __init__.py  alert_model.py  rule_engine.py
engine/alpha_generation/: __init__.py  claims_cross_analyzer.py  composite_signal_aggregator.py  composite_signal_v2.py  composite_signal_v3.py  credit_stress_analyzer.py  macro_conviction.py  schemas.py  signal_persistence_service.py  strategy_composer.py  vix_signal_calculator.py  yield_curve_analyzer.py
engine/analytics/: __init__.py  composite_signal_v3.py
engine/backtesting/: __init__.py  backtest_runner.py  engine.py  performance.py  results_repo.py  strategy.py  strategy_builder.py
engine/fixed_income/: real_yield_analyzer.py
engine/forecasting/: __init__.py  simple_forecaster.py
engine/futures_analysis/: __init__.py  basis_analyzer.py  commodity_regime.py  open_interest_analyzer.py  roll_analyzer.py  schemas.py
engine/ib_forecast/: __init__.py  consensus_builder.py  fed_projections_parser.py  forecast_extractor.py  ib_rss_fetcher.py  ib_signal_generator.py  imf_wb_outlook_fetcher.py  schemas.py
engine/llm/: __init__.py  hardware_detector.py  market_qa_engine.py  narrative_generator.py  news_semantic_analyzer.py
engine/market_data/: __init__.py  currency_converter.py  delta_windows.py  fred_simple_client.py  instrument_registry.py  kpi_computer.py  live_market_service.py  sanity_checker.py  sanity_checker_v2.py  silent_failure_detector.py  snapshot_disk_cache.py  websocket_manager.py
engine/news/: __init__.py  article_cleaner.py  entity_resolver.py  news_aggregator.py  news_classifier.py  news_event_clusterer.py  news_signal_generator.py  relevance_scorer.py  rss_fetcher.py  schemas.py
engine/options/: __init__.py  bs_calculator.py  collar_advisor.py  expected_move.py  iv_solver.py  mock_chain.py  strategy_builder.py  vol_surface_builder.py
engine/portfolio/: rebalancing_engine.py
engine/risk/: cvar_calculator.py  risk_contribution.py
engine/strategy_lab/: __init__.py  ensemble_composer.py  genetic_optimizer.py  regime_aware_engine.py  strategy_registry.py  walk_forward_validator.py
engine/stress_test/: forward_scenarios.py
engine/stress_testing/: __init__.py  historical_scenarios.py  scenario.py  scenario_generator.py  scenarios_repo.py  tester.py
engine/technical/: divergence_detector.py  indicator_dsl.py  indicator_registry.py  pattern_recognition.py  pattern_schemas.py  pattern_signals_repo.py  pivot_utils.py  volume_analysis.py  volume_analysis_v2.py
engine/volatility/: vol_surface.py
files/: config_operational_defaults.yaml
patch_v810_settimana3/: apply_patch_settimana3.py
personal/alerts/: __init__.py  alert_model.py  rule_engine.py
personal/cashflow/: __init__.py  engine.py  entry_model.py  projector.py
personal/data_entry/: __init__.py  desktop.ini  etoro_aggregator.py  etoro_client.py  etoro_importer.py  etoro_models.py  etoro_parser.py  etoro_position_builder.py  etoro_raw_payload.json  goal_contributions.py  goal_form.py  networth_editor.py  networth_forms.py  override_store.py  position_form.py  risk_questionnaire.py  risk_questionnaire_ui.py  user_data_store.py
readme_claude/: .claudeignore.txt  CLAUDE-CONVENTIONS.md  CLAUDE-DATA.md  ROADMAP_ANALISI_MERCATO_v4.md  ROADMAP_CODE_QUALITY_v1.0.md  ROADMAP_REFACTORING_UI_v1_0.md
scripts/: __init__.py  backup.py  download_models.py  duckdb_retention.py  init_database.py  install.py  qa_check.py  quality_gate.py  run_scheduler.py  scheduler_jobs_analysis.py  scheduler_jobs_data.py  scheduler_utils.py
shared/: __init__.py  alpha_decay_monitor.py  backup_manager.py  consensus_validator.py  constants.py  env_loader.py  error_budget.py  exceptions.py  feature_flags.py  fx_service.py  health.py  logger.py  metrics.py  rate_limit_manager.py  signal_bus.py  signal_registry.py  signal_types.py  types.py
shared/db/: __init__.py  (+12 more)
tests/: conftest.py  test_installer.py  test_property_based.py
(+527 files in other folders)
