[tool.poetry]
name = "market-ai"
version = "6.0.0"
description = "Market Analysis AI — Professional Edition (dual engine/personal architecture)"
authors = ["Market AI Team"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "shared" },
    { include = "engine" },
    { include = "personal" },
    { include = "bridge" },
    { include = "presentation" },
]

# ═══════════════════════════════════════════════════════════════════════════
# Dipendenze principali — allineate con lo stack tecnologico v6.0
# ═══════════════════════════════════════════════════════════════════════════
[tool.poetry.dependencies]
python = "^3.11"

# Database
duckdb = "^0.10"
sqlalchemy = "^2.0"
alembic = "^1.13"
pyarrow = "^16.0"          # Required for Parquet I/O in pandas + DuckDB exports
pytz = "^2024.1"           # Required by DuckDB for tz-aware timestamp handling

# Config & validation
pydantic = "^2.7"
python-dotenv = "^1.0"
pyyaml = "^6.0"
# v7.1.4 (fix B7): rilassato da "^0.18" a ">=0.18,<1.0" per consentire
# l'install di pandera 0.20+ (split namespace pandera.pandas). Il codice
# in shared/db/schemas.py ha fallback automatico per entrambe le linee.
pandera = ">=0.18,<1.0"

# Cache
diskcache = "^5.6"

# Data sources
# v7.1.3 (post-feedback utente): yfinance 0.2.55+ ha introdotto live.py
# che importa websockets.asyncio.client. Ha causato ModuleNotFoundError
# anche con websockets 12+ a causa di mismatch tra versioni websockets.
# Pin a 0.2.54: ultima versione SENZA live.py, perfettamente stabile per
# OHLCV/info/financials che e' tutto cio' che usiamo nel progetto.
yfinance = "0.2.54"
pandas-datareader = "^0.10"
finnhub-python = "^2.4"
alpha-vantage = "^2.3"
sec-edgar-downloader = "^5.0"

# Async & HTTP
aiohttp = "^3.9"
httpx = "^0.27"
# v7.1.3 (post-feedback utente): pin stringente per evitare websockets 13.x.
# yfinance 0.2.55+ importa `websockets.asyncio.client`. Questo sub-modulo:
#  - esiste in websockets 12.x con quella struttura;
#  - in websockets 13.x e' stato spostato/rimosso causando ModuleNotFoundError.
# Pinning a 12.x e' la soluzione piu' sicura finche' yfinance non si allinea.
websockets = ">=12.0,<13.0"
asyncio-throttle = "^1.0"

# NLP / sentiment / scraping
vadersentiment = "^3.3"
beautifulsoup4 = "^4.12"

# Numerica
numpy = "^1.26"
scipy = "^1.12"
pandas = "^2.2"

# Statistica / econometrica
statsmodels = "^0.14"
arch = "^7.0"
hmmlearn = "^0.3"
pmdarima = "^2.0"

# ML & DL
scikit-learn = "^1.4"
xgboost = "^2.0"
shap = "^0.45"
prophet = "^1.1"

# Backtesting & ottimizzazione
vectorbt = "^0.26"
cvxpy = "^1.5"

# Grafi
networkx = "^3.3"

# JIT
numba = "^0.59"

# Visualizzazione
plotly = "^5.20"
streamlit = "^1.35"
streamlit-extras = "^0.4"

# CLI & logging
typer = "^0.12"
rich = "^13.7"
structlog = "^24.1"

# Scheduler & notifiche
apscheduler = "^3.10"
plyer = "^2.1"

# Report PDF
weasyprint = "^62.0"
jinja2 = "^3.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
pytest-benchmark = "^4.0"
pytest-mock = "^3.12"
hypothesis = "^6.100"
freezegun = "^1.5"
mypy = "^1.10"
ruff = "^0.4"
bandit = "^1.7"
safety = "^3.2"
pre-commit = "^3.7"
mkdocs-material = "^9.5"
types-pyyaml = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ═══════════════════════════════════════════════════════════════════════════
# Tool configuration
# ═══════════════════════════════════════════════════════════════════════════
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "build", "dist", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "TCH", "RUF"]
ignore = ["E501"]  # line-length gestita dal formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "yfinance.*", "pandas_datareader.*", "duckdb.*",
    "apscheduler.*", "diskcache.*", "pandas.*", "pandera.*",
    "pyarrow.*", "bcrypt.*", "streamlit.*", "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: test lenti (eseguire con --runslow)",
    "integration: test integrazione (richiede rete/API)",
    "benchmark: test benchmark performance",
    "regression: test di non-regressione per bug storici (pytest -m regression)",
]

[tool.coverage.run]
source = ["shared", "engine", "personal", "bridge", "presentation"]
omit = ["*/tests/*", "*/__init__.py", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    # Streamlit/Plotly are optional UI deps — not present in CI environments.
    # Lines that only execute when Streamlit is importable are excluded.
    "import streamlit as st",
    "import plotly\\.graph_objects as go",
    "import plotly\\.express as px",
    "from plotly\\.subplots import",
    "except ImportError:",
    "return  # pragma: no cover",
]
show_missing = true
precision = 1

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used ammesso nei test
